Fix menu text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ button{
 	background-image: cover;
 	flex-direction: column;
 	background: #481d1de4;
-	width:50%;
+	width:30%;
 	height: 80%;
 	color: white;
 	padding: 20px 20px;
@@ -67,5 +67,8 @@ main{
 	display: flex;
 	justify-content: left;
 	align-items: left;
+}
 
+.textBox{
+	display: flex;
 }
